--- a/preprocessing_codes.ipynb
+++ b/preprocessing_codes.ipynb
@@ -22,7 +22,7 @@
       },
       "outputs": [],
       "source": [
-        "### 코랩 기준으로 작성\n",
+        "### 코랩 기준으로\n",
         "# !pip install timezonefinder\n",
         "# !pip install datatable"
       ]
@@ -32,10 +32,12 @@
       "source": [
         "### 데이터 빠르게 읽는 코드\n",
         "import datatable as dt\n",
-        "\n",
-        "data = dt.fread(\"/content/drive/MyDrive/DM_project/filtered_data.csv\")\n",
-        "data = data.to_pandas()\n",
-        "data = data.drop(new_data.columns[0], axis=1)"
+        "def read_data_faster(file_path=\"/content/drive/MyDrive/DM_project/filtered_data.csv\"):\n",
+        "  data = dt.fread(file_path)\n",
+        "  data = data.to_pandas()\n",
+        "  data = data.drop(new_data.columns[0], axis=1)\n",
+        "  return data\n",
+        "data = read_data_faster()"
       ],
       "metadata": {
         "id": "Rv1yZRGEQd3r"
@@ -55,36 +57,44 @@
     {
       "cell_type": "code",
       "source": [
-        "### 미국, 캐나다 말고 다 빼기\n",
-        "# FN, UM, MH 빼기\n",
-        "data = data[(data[\"STATE\"]!=\"FN\") & (data[\"STATE\"]!=\"UM\") & (data[\"STATE\"]!=\"MH\")]\n",
+        "def preprocess_data(data):\n",
+        "  ### 미국, 캐나다 말고 다 빼기\n",
+        "  # FN, UM, MH 빼기\n",
+        "  data = data[(data[\"STATE\"]!=\"FN\") & (data[\"STATE\"]!=\"UM\") & (data[\"STATE\"]!=\"MH\")]\n",
         "\n",
-        "### AIRPORT_ID 기준으로 unknown 및 공항 아닌거 빼버림\n",
-        "# H2O: 물에 떨어짐\n",
-        "# RIGG: oil 어쩌구\n",
-        "# PVT: 개인소유\n",
-        "data = data[(data[\"AIRPORT_ID\"]!=\"ZZZZ\") & (data[\"AIRPORT_ID\"]!=\"H2O\") & (data[\"AIRPORT_ID\"]!=\"RIGG\") & (data[\"AIRPORT_ID\"]!=\"PVT\")]\n",
+        "  ### AIRPORT_ID 기준으로 unknown 및 공항 아닌거 빼버림\n",
+        "  # H2O: 물에 떨어짐\n",
+        "  # RIGG: oil 어쩌구\n",
+        "  # PVT: 개인소유\n",
+        "  data = data[(data[\"AIRPORT_ID\"]!=\"ZZZZ\") & (data[\"AIRPORT_ID\"]!=\"H2O\") & (data[\"AIRPORT_ID\"]!=\"RIGG\") & (data[\"AIRPORT_ID\"]!=\"PVT\")]\n",
         "\n",
-        "### LATITUDE, LONGTITUDE 처리\n",
-        "data[\"AIRPORT_LATITUDE\"] = [x if len(x.split(\",\"))==1 else x.split(\",\")[0] for x in data[\"AIRPORT_LATITUDE\"]] # latitude 입력 형식 잘못된 부분 정정\n",
-        "data[\"AIRPORT_LONGITUDE\"] = data[\"AIRPORT_LONGITUDE\"].astype(float)\n",
-        "data[\"AIRPORT_LATITUDE\"] = data[\"AIRPORT_LATITUDE\"].astype(float)\n",
+        "  ### LATITUDE, LONGTITUDE 처리\n",
+        "  data[\"AIRPORT_LATITUDE\"] = [x if len(x.split(\",\"))==1 else x.split(\",\")[0] for x in data[\"AIRPORT_LATITUDE\"]] # latitude 입력 형식 잘못된 부분 정정\n",
+        "  data[\"AIRPORT_LONGITUDE\"] = data[\"AIRPORT_LONGITUDE\"].astype(float)\n",
+        "  data[\"AIRPORT_LATITUDE\"] = data[\"AIRPORT_LATITUDE\"].astype(float)\n",
         "\n",
-        "### AC_CLASS, AC_MASS가 NAN인건 빼기\n",
-        "# 세부 기종을 알 수 없으므로 MASS도 알 수 없다.\n",
-        "drop_idx = data[(data[\"AC_CLASS\"].isnull()) | (data[\"AC_MASS\"].isnull())].index\n",
-        "data.drop(drop_idx, inplace=True)\n",
+        "  ### AC_CLASS, AC_MASS가 NAN인건 빼기\n",
+        "  # 세부 기종을 알 수 없으므로 MASS도 알 수 없다.\n",
+        "  drop_idx = data[(data[\"AC_CLASS\"].isnull()) | (data[\"AC_MASS\"].isnull())].index\n",
+        "  data.drop(drop_idx, inplace=True)\n",
         "\n",
-        "### DAMAGE_sum 생성\n",
-        "damage_cols = [\"DAM_RAD\", \"DAM_WINDSHLD\", \"DAM_NOSE\", \"DAM_ENG1\", \"DAM_ENG2\", \"DAM_ENG3\", \"DAM_ENG4\",\n",
-        "               \"DAM_PROP\", \"DAM_WING_ROT\", \"DAM_FUSE\", \"DAM_LG\", \"DAM_TAIL\", \"DAM_LGHTS\", \"DAM_OTHER\"]\n",
-        "def damage_sums(data, damage_cols=damage_cols):\n",
-        "  damage_sum = data[damage_cols[0]].astype(int)\n",
-        "  for i in range(1,len(damage_cols)):\n",
-        "    damage_sum = damage_sum + data[damage_cols[i]].astype(int)\n",
-        "  return damage_sum\n",
-        "damage_sum = damage_sums(data)\n",
-        "data[\"DAMAGE_sum\"] = damage_sum"
+        "  ### DAMAGE_sum 생성\n",
+        "  damage_cols = [\"DAM_RAD\", \"DAM_WINDSHLD\", \"DAM_NOSE\", \"DAM_ENG1\", \"DAM_ENG2\", \"DAM_ENG3\", \"DAM_ENG4\",\n",
+        "                \"DAM_PROP\", \"DAM_WING_ROT\", \"DAM_FUSE\", \"DAM_LG\", \"DAM_TAIL\", \"DAM_LGHTS\", \"DAM_OTHER\"]\n",
+        "  def damage_sums(data, damage_cols=damage_cols):\n",
+        "    damage_sum = data[damage_cols[0]].astype(int)\n",
+        "    for i in range(1,len(damage_cols)):\n",
+        "      damage_sum = damage_sum + data[damage_cols[i]].astype(int)\n",
+        "    return damage_sum\n",
+        "  damage_sum = damage_sums(data)\n",
+        "  data[\"DAMAGE_sum\"] = damage_sum\n",
+        "\n",
+        "  ### DAMAGE_sum이 0이면 전부 DAMAGE_LEVEL이 N이다.\n",
+        "  ### DAMAGE_LEVEL 결측치는 전부 N으로 채웠다.\n",
+        "  ### 그중에 DAMAGE_sum이 1인 컬럼은 fatality, injury가 없고 엔진이 아닌 날개부분에 데미지가 있으므로 N으로 처리한다.\n",
+        "  data[\"DAMAGE_LEVEL\"] = data[\"DAMAGE_LEVEL\"].fillna(\"N\")\n",
+        "  return data\n",
+        "data = preprocess_data(data)"
       ],
       "metadata": {
         "id": "HPQM_3yJQn6n"
@@ -118,7 +128,6 @@
         "from math import pi, sin, cos, tan, acos, asin, atan, atan2\n",
         "from datetime import datetime\n",
         "import time\n",
-        "\n",
         "HH=0\n",
         "MM=1\n",
         "\n",
